src/test/ui/coherence/coherence-overlapping-pairs.re.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-overlapping-pairs.rs:11:1
   |
LL | impl<T> Remote for lib::Pair<T,Foo> { }
   | ^^^^^^^^^^^^^^^^^^^----------------
   | |                  |
   | |                  `lib::Pair` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0117`.
